--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,6 +7,9 @@
     <title>MEVN FullStack</title>
 </head>
 <body>
+    <div id="app"></div>
     <h1>Hello World Vue</h1>
+
+    <script src="/js/bundle.js"></script>
 </body>
 </html>
