--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEVN FullStack</title>
+    <title>MEVN CRUD</title>
+    <!-- Bootstrap 4 -->
+    <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
 </head>
+
 <body>
     <div id="app"></div>
-    <h1>Hello World Vue</h1>
 
     <script src="/js/bundle.js"></script>
 </body>
+
 </html>
